# cockroach-incident-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-ui.txt  requirements.txt
app/: streamlit_app.py
data/: eval_alerts.json  incidents.json
docs/: SETUP.md  SUBMISSION.md  VIDEO_SCRIPT.md  architecture.md
infra/: deploy-ui.sh  ecs-task-definition.json  template.yaml
mcp/: README.md  config.example.json
schema/: 001_schema.sql
scripts/: demo.py  eval.py  init_db.py  reset.py  seed.py
src/: __init__.py  agent.py  config.py  embeddings.py  lambda_handler.py  memory.py
tests/: test_agent_contract.py  test_aws_profile_guard.py  test_eval_harness.py  test_lambda_routes.py  test_memory_logic.py  test_packaging.py
